finished merge features

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,10 +32,14 @@ set(SOURCE_FILES
     include/engine/VisionManager.hpp src/engine/VisionManager.cpp
     include/engine/KinectSensor.hpp src/engine/KinectSensor.cpp
     src/entities/Bee.cpp include/entities/Bee.hpp
-    src/entities/Projectile.cpp include/entities/Projectile.hpp
-    src/entities/Stinger.cpp include/entities/Stinger.hpp
-    src/entities/Tower.cpp include/entities/Tower.hpp
-    src/entities/Sprayer.cpp include/entities/Sprayer.hpp
+    src/entities/projectiles/Projectile.cpp include/entities/projectiles/Projectile.hpp
+    src/entities/projectiles/Rock.cpp include/entities/projectiles/Rock.hpp
+    src/entities/projectiles/Stinger.cpp include/entities/projectiles/Stinger.hpp
+    src/entities/towers/Tower.cpp include/entities/towers/Tower.hpp
+    src/entities/towers/Sprayer.cpp include/entities/towers/Sprayer.hpp
+    src/entities/towers/Frog.cpp include/entities/towers/Frog.hpp
+    src/entities/towers/Mortar.cpp include/entities/towers/Mortar.hpp
+    include/entities/util/ITargetable.hpp
 )
 
 # --- Kinect SDK Setup ---
